CSS: Avoid extra margin padding for short lists

--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -7,7 +7,7 @@
   padding-left: 3em;
 }
 
-.main-content ul > li {
+.main-content ul > li > p {
   margin-bottom: 2em;
 }
 
